# redis-ttl-audit

./: .gitignore  README.md  pyproject.toml  report.md
examples/: sample-report.md
src/redis_ttl_audit/: __init__.py  __main__.py  cli.py  formatting.py  grouping.py  models.py  report.py  scanner.py  suspicious.py
tests/: test_cli.py  test_formatting.py  test_grouping.py  test_models.py  test_report.py  test_scanner.py  test_suspicious.py
